--- a/package.json
+++ b/package.json
@@ -25,5 +25,10 @@
   "dependencies": {
     "extend-shallow": "^2.0.1",
     "highlight.js": "^8.8.0"
+  },
+  "verb": {
+    "related": {
+      "list": "remarkable"
+    }
   }
 }
