--- a/package.json
+++ b/package.json
@@ -30,5 +30,12 @@
     "related": {
       "list": "remarkable"
     }
-  }
+  },
+  "contributors": [
+    {
+      "name": "Brian Woodward",
+      "email": "brian.woodward@gmail.com",
+      "url": "https://github.com/doowb"
+    }
+  ]
 }
